--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,4 +2,15 @@
     <string name="app_name">Timely</string>
     <string name="appCenterCrashes_whenToSendCrashes" moduleConfig="true" translatable="false">DO_NOT_ASK_JAVASCRIPT</string>
 		<string name="appCenterAnalytics_whenToEnableAnalytics" moduleConfig="true" translatable="false">ALWAYS_SEND</string>
+		 <string moduleConfig="true" name="CodePushDeploymentKey">E7m5PSjSxCXhrV51vOOYPnXQavf6jGwv_B4lG</string>
+		 <string name="CodePushPublicKey">-----BEGIN PUBLIC KEY-----
+MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEA4ILm4J62C0TQePVWnAc0
+M96V4bJ/HrFErzBV6IhXMkC21bVcpL9oD73SnI8+0WQZnruUnzjB9E/w/r58KC+J
+wj5kHC3csVlTTlTNzPvdSm6+5WHbkcqEi/lc8adhKWZy39vnLfA2aLj4vpASUDcd
+5SJtqEazqPtzyrObKabEjY8qE1JBENyp4WsKrrk/oVObdgYLnb20gqkG+BC0ddvZ
+v4mbphoHK4vH6WAtTVu0DiYlBpUB5T2wxtXOOK3nY6ekSKqXOSPQFlxxQdrgRPTF
+2aLzKRfzCdDchDe++2rC22TkWMWg0+ag+6JS+BgESMW9mxs6FjY8Cgn/3ljId1aR
+4wIDAQAB
+-----END PUBLIC KEY-----
+</string>
 </resources>
